src/test/ui/issues/50000-59999/issue-57843.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57843.rs:23:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&'a bool,)>`
              found type `FnOnce<(&bool,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
